modulo2/react/digital_store/src/index.css
@import "tailwindcss";
@import "./var.css";
@layer prime {
  @import "primeicons/primeicons.css";
}

button {
  cursor: pointer;
}
html,body,main {
    margin: 0;
    box-sizing: border-box;
    padding: 0;
    font-size: 1em;
};
.nav-active-link {
  font-weight: bold;
  text-decoration: solid underline var(--primary-color) 20px;
  color: var(--primary-color);
  text-underline-offset: 5px;
  text-decoration-thickness: 3px;
}
#main-header {
  display: flex;
  justify-content: center;
  padding: 5px 10px 0 10px;
  background-color: var(--white-color);
}
#logo-header{
  width: 243px;
  height: 44px;
}
#header-redirect {
  font-size: 1.0rem;
}
input {
  padding: 10px;
}
body { 
  width: 100vw;
  background: linear-gradient(90deg,rgba(204, 204, 204, 1) 0%, rgba(245, 245, 245, 1) 100%);
};
#main-footer{
  display: flex;
  flex-direction: column;
}
#footer-content-main-div{
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 2em;
}
#footer-info-categories-div{
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 2rem;
}
#footer-logo-div{
  display: flex;
  flex-direction: column;
  gap: 1em;
  width: 100%;
}
/* 768px = md */
@media (min-width: 768px) {
  #main-header {
    padding: 10px 20px 0 20px;
  }
  #logo-header{
    width: 243px;
    height: 44px;
  }
  #header-redirect {
    font-size: 1.0rem;
  }
  #header-redirect {
    font-size: 1.0rem;
  }
  #main-footer{
    display: flex;
    flex-direction: column;
  }
  #footer-content-main-div{
    display: flex;
    flex-direction: row ;
  }
  #footer-info-categories-div{
    display: flex;
    float: right;
    flex-direction: row;
    justify-content: space-around;
    width: 100%;
  }
  #footer-logo-div{
    width: 30%;
  }
};

/*xl*/
@media (min-width: 1024px) {
  #main-header {
    padding: 30px 60px
  }
  #logo-header{
    width: 243px;
    height: 44px;
  }
  #header-redirect {
    font-size: 1.0rem;
  }
  #main-footer{
    padding: 5rem 8rem 1rem 8rem;
    display: flex;
    flex-direction: column ;
  }
  #footer-content-main-div{
    display: flex ;
    flex-direction: row ;
  }
  #footer-info-categories-div{
    display: flex;
    float: right;
    flex-direction: row;
    justify-content: space-around;
    width: 100%;
  }
  #footer-logo-div{
    width: 40%;
    margin-right: 15rem;
    gap: 3.5rem;
  }
};

